# miplib

./: .gitignore  CMakeLists.txt  README.md  configure.sh
.github/workflows/: on_push_action.yml  publish.yaml  pull-request.yml  update_backends.yml
cmake/: util.cmake
docker/: Dockerfile  README.md  deploy.sh
miplib/: CMakeLists.txt  callback.hpp  capi.cpp  capi.hpp  constr.cpp  constr.hpp  expr.cpp  expr.hpp  lazy.hpp  miplib.hpp  solver.cpp  solver.hpp  util.hpp  var.cpp  var.hpp
miplib/gurobi/: callback.hpp  constr.hpp  exception.hpp  solver.cpp  solver.hpp  var.cpp  var.hpp
miplib/lpsolve/: constr.hpp  solver.cpp  solver.hpp  util.cpp  util.hpp  var.cpp  var.hpp
miplib/scip/: constr.hpp  solver.cpp  solver.hpp  util.hpp  var.cpp  var.hpp
miplib/util/: scale.cpp  scale.hpp
test/: CMakeLists.txt
test/unit/: expr.cpp  main.cpp  solver.cpp
